--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button id="rock">ROCK</button>
+    <button id="paper">PAPER</button>
+    <button id="scissor">SCISSOR</button>
+    <div id="resultDiv"></div>
+    <div id="scoreDiv"></div>
 </body>
 </html>
