--- a/index.html
+++ b/index.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="styles.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+ 
     <script src="script.js" defer></script>
 </head>
+
 <body>
-    <button id="rock">ROCK</button>
-    <button id="paper">PAPER</button>
-    <button id="scissor">SCISSOR</button>
-    <div id="resultDiv"></div>
-    <div id="scoreDiv"></div>
+    <div id="container">
+        <div id="titleSection">
+            <h1>ROCK PAPER SCISSOR</h1>
+        </div>
+        <div id="gameSection">
+            <div id="playerSection">
+                <button id="rock" ></button>
+                <button id="paper"></button>
+                <button id="scissor"></button>
+            </div>
+            <div id="computerSection">
+                <button id="computerbtn"></button>
+            </div>
+        </div>
+        <div id="scoreSection">
+            <div id="playerScoreDiv" class="scoreContainer">0</div>
+            <div>
+                <div id="roundDiv">Round</div>
+                <div id="resultDiv"></div>
+            </div>
+            <div id="computerScoreDiv" class="scoreContainer">0</div>
+
+
+        </div>
+    </div>
+    <div id="endScreen">
+        <div id="resultDisplay">Yayy,you won</div>
+        <button id="playAgain">Play Again</button>
+    </div>
 </body>
+
 </html>
