Fix play again screen bug

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div id="gameSection">
             <div id="playerSection">
-                <button id="rock" ></button>
-                <button id="paper"></button>
-                <button id="scissor"></button>
+                <button id="rock" class="playerbtn"></button>
+                <button id="paper" class="playerbtn"></button>
+                <button id="scissor" class="playerbtn"></button>
             </div>
             <div id="computerSection">
                 <button id="computerbtn"></button>
@@ -38,8 +38,8 @@
         </div>
     </div>
     <div id="endScreen">
-        <div id="resultDisplay">Yayy,you won</div>
-        <button id="playAgain">Play Again</button>
+        <div id="resultDisplay">Best to 5 wins</div>
+        <button id="playAgain">Play</button>
     </div>
 </body>
 
